--- a/testing/node-image-upload/templates/index.jade
+++ b/testing/node-image-upload/templates/index.jade
@@ -2,5 +2,5 @@ html
 	head
 		title Image Upload
 	body
-		h3 This simple web app represents a simple node.js image upload application.
+		h3 This simple web app represents a simple Node.js image upload application.
 		block content
