Remove inline style from testpages

--- a/testing/node-image-upload/templates/view.jade
+++ b/testing/node-image-upload/templates/view.jade
@@ -2,4 +2,4 @@ extends index
 block content
     p
         a(href='/') Upload another image
-    img(style='border: 2px solid black; max-width:60%;', src='#{imagepath}')
+    img(src='#{imagepath}')
