--- a/testing/python-image-upload/templates/view.html
+++ b/testing/python-image-upload/templates/view.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
 {% block content %}
 <p><a href="/">Upload another image</a></p>
-<img style='border: 2px solid black; max-width:60%;' src="{{imagepath}}">
+<img src="{{imagepath}}">
 {% endblock %}
